# rbtr

./: .editorconfig  .gitignore  .rbtr.toml  .sqlfluffignore  AGENTS.md  ARCHITECTURE.md  LICENSE  PLAN.md  PROFILING.md  README.md  biome.json  justfile  package.json  pyproject.toml
.agents/skills/rbtr-data/: SKILL.md
.agents/skills/rbtr-languages/: SKILL.md
.agents/skills/rbtr-languages/references/: tags-scm-reference.md
.agents/skills/rbtr-testing/: SKILL.md
.github/: dependabot.yml
.github/workflows/: checks.yaml  ci.yaml  release.yaml
.pi/: settings.json
.pi/extensions/rbtr-index/: index.ts  render.ts  settings.ts
demo/: .gitignore  README.md  agent-integration.tape  index-search.tape  structural-nav.tape
scripts/: bench_index.py  bench_search.py  eval_search.py  tune_search.py
skills/review-github-pr/: CHANGELOG.md  SKILL.md  package.json
skills/review-github-pr/evals/: evals.json
skills/review-github-pr/evals/files/: deletion_patch.diff  full_diff.diff  multi_hunk_patch.diff  renamed_file.diff  simple_patch.diff
skills/review-github-pr/queries/: add_comment.graphql  add_review.graphql  add_thread_reply.graphql  delete_comment.graphql  delete_review.graphql  fetch_pr.graphql  fetch_review_comments.graphql  pr_id.graphql  resolve_thread.graphql  submit_review.graphql  update_comment.graphql
skills/review-github-pr/references/: graphql-api.md
src/rbtr/: __init__.py  cli.py  config.py  constants.py  creds.py  engine.py  events.py  exceptions.py  input.py  models.py  oauth.py  repo.py  shell_exec.py  state.py  styles.py  tui.py  usage.py
src/rbtr/engine/: __init__.py  agent.py  compact.py  connect.py  connect_cmd.py  core.py  draft_cmd.py  errors.py  history.py  index_cmd.py  indexing.py  llm.py  memory_cmd.py  model.py  model_cmd.py  model_settings.py  publish.py  reload_cmd.py  review.py  review_cmd.py  save.py  session.py  session_cmd.py  setup.py  shell.py  skill_cmd.py  state.py  stats_cmd.py  tools.py  types.py
src/rbtr/git/: __init__.py  filters.py  objects.py  repo.py
src/rbtr/github/: __init__.py  auth.py  client.py  draft.py
src/rbtr/index/: arrow.py  chunks.py  edges.py  embeddings.py  git.py  languages.py  models.py  orchestrator.py  search.py  store.py  tokenise.py  treesitter.py
src/rbtr/index/sql/: count_orphan_chunks.sql  delete_snapshots.sql  diff_modified.sql  get_chunks.sql  (+6 more)
src/rbtr/llm/: __init__.py  agent.py  compact.py  context.py  costs.py  deps.py  errors.py  history.py  memory.py  operational_prompts.py  stream.py  tools.py  types.py  usage.py
src/rbtr/plugins/: README.md  __init__.py  bash.py  c.py  cpp.py  defaults.py  go.py  hookspec.py  java.py  javascript.py  manager.py  python.py  ruby.py  rust.py
src/rbtr/prompts/: __init__.py  compact.md  index_status.md  memory_extract.md  review.md  system.md
src/rbtr/providers/: __init__.py  claude.py  endpoint.py  fireworks.py  google.py  openai.py  openai_codex.py  openrouter.py  shared.py  types.py
src/rbtr/sessions/: history.py  incidents.py  kinds.py  overhead.py  replay.py  scrub.py  serialise.py  stats.py  store.py
src/rbtr/skills/: registry.py
src/rbtr/tui/: footer.py  input.py  ui.py
src/tests/: conftest.py  helpers.py  test_completion.py  test_config.py  test_constants.py  test_context_markers.py  test_credentials.py  test_input.py  test_prompts.py  test_repo.py  test_thinking_effort.py  test_tui.py  test_usage.py
src/tests/engine/: builders.py  conftest.py  test_agent.py  test_auto_submit.py  test_behavioral.py  test_compact.py  test_connect_cmd.py  test_engine.py  test_errors.py  test_history.py  test_index_cmd.py  test_indexing.py  test_invariants.py  test_llm.py  test_memory_cmd.py  test_model_cmd.py  test_model_settings.py  test_path_filtering.py  test_reload_cmd.py  test_save.py  test_session_cmd.py  test_session_label.py  test_setup.py  test_skill_cmd.py  test_stats_cmd.py  test_tools.py
src/tests/git/: conftest.py  test_objects.py  test_repo.py
src/tests/github/: conftest.py  test_anchor_comments.py  test_auth.py  test_discussion.py  test_draft.py  test_draft_cmd.py  test_draft_lifecycle.py  test_draft_sync.py  test_draft_tools.py  test_position_to_line.py  test_post.py  test_sync.py
src/tests/index/: conftest.py  test_arrow.py  test_chunks.py  test_edges.py  test_embedding_text.py  test_embeddings.py  test_git.py  test_languages.py  test_orchestrator.py  test_search.py  test_search_ranking.py  test_search_structural.py  test_store.py  test_tokenise_keywords.py  test_treesitter.py
src/tests/llm/: conftest.py  ctx.py  test_agent.py  test_errors.py  test_history.py  test_interrupted.py  test_memory.py  test_model_settings.py  test_path_filtering.py  test_snapshot.py  test_stream.py  test_stream_text_fidelity.py  test_tools.py  test_tools_common.py  test_tools_draft.py  test_tools_file.py  test_tools_git.py  test_tools_index.py  test_tools_memory.py  test_tools_notes.py  test_toolsets.py
src/tests/plugins/: test_bash.py  test_c.py  test_cpp.py  test_defaults.py  test_go.py  test_hookspec.py  test_import_extraction.py  test_java.py  test_javascript.py  test_manager.py  test_python.py  test_ruby.py  test_rust.py  test_symbol_extraction.py
src/tests/providers/: test_claude_auth.py  test_endpoint.py  test_model_settings.py  test_openai_auth.py  test_openai_codex_auth.py  test_provider.py
src/tests/scripts/: test_bench_search.py
src/tests/sessions/: assertions.py  case_histories.py  case_messages.py  conftest.py  fact_data.py  test_crud.py  test_facts.py  test_history.py  test_lifecycle.py  test_overhead.py  test_replay_roundtrip.py  test_scrub.py  test_serialise.py  test_store.py
src/tests/skills/: test_discovery.py  test_prompt.py  test_read_file.py  test_registry.py
src/tests/tui/: test_key_encoding.py  test_theme.py  test_tool_panels.py
tests/: test_auth.py  test_claude_auth.py  test_completion.py  test_constants.py  test_credentials.py  test_endpoint.py  test_engine.py  test_input.py  test_openai_codex_auth.py  test_prompts.py  test_provider.py  test_repo.py  test_usage.py
todo/: TODO-pi-extension-rbtr-index.md
(+50 files in other folders)
